<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.edu.reciclador.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mx.edu.reciclador.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_informacionResiduo"
        android:name="mx.edu.reciclador.ui.informacion.Informacion"
        android:label="@string/menu_identificar"
        tools:layout="@layout/fragment_informacion" />
    <fragment
        android:id="@+id/nav_ayuda"
        android:name="mx.edu.reciclador.ui.legal.Ayuda"
        android:label="@string/menu_Ayuda"
        tools:layout="@layout/fragment_ayuda" />

    <fragment
        android:id="@+id/nav_residuos"
        android:name="mx.edu.reciclador.ui.residuos.ResiduosFragment"
        android:label="@string/menu_Residuos"
        tools:layout="@layout/fragment_residuos" />

</navigation>