<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.legal.LegalPrincipal">

    <TextView
        android:id="@+id/textTituloLegal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_legal"
        android:layout_marginTop="-200dp"
        />

    <TextView
        android:id="@+id/textLegalDerechos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/legal_derechos"
        android:layout_gravity="left"
        />

    <TextView
        android:id="@+id/textTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/legal_terminos"
        android:layout_gravity="left"
        />

    <TextView
        android:id="@+id/textPoliticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/legal_politicas"
        android:layout_gravity="left"
        />

    <TextView
        android:id="@+id/textInformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/legal_informacion" />

    <Button
        android:id="@+id/botonRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Regresar"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        />


</LinearLayout>
