<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Mi Galeria" />
        <item
            android:id="@+id/nav_residuos"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/menu_Residuos" />

        <item
            android:id="@+id/nav_ayuda"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_Ayuda" />
        <item
            android:id="@+id/nav_Legal"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_Legal" />
    </group>
</menu>